fixed potential link issue, clicking links now directs to new tab, updated protein result for new interaction info, added overflow scroll for table

--- a/core/static/bootstrap/css/bootstrap.css
+++ b/core/static/bootstrap/css/bootstrap.css
@@ -96,6 +96,10 @@ footer {
 	border-style:groove !important;
 	
 }
+#scrolling_table {
+	height:500px !important;
+	overflow-y: scroll !important;
+}
 #summary {
   padding-left:1%;
   text-align:left !important;
